Fix color support for stretchy, strikethrough, and fbox (#792)
Summary:
Stuff like `\red{\overbrace{AB}}` works now in addition to `\color{red}{\overbrace{AB}}`. Strikethrough now respects color. The Firefox in the screenshotter doesn't seem to support `background-image` + `mask`, but I manually tested that the latest Firefox does.

Test plan:
Ran `make`, then tested in latest Chrome and Firefox to ensure color support was working, then ran `make screenshots`.

--- a/static/katex.less
+++ b/static/katex.less
@@ -853,9 +853,12 @@
         // This section won't be applied by some older browsers, so they will instead
         // render the black background-image defined above.
 
-      .mask {
-        background-image: none;
-      }
+        .mask,
+        .bcancel-mask,
+        .cancel-mask,
+        .xcancel-mask {
+            background-image: none;
+        }
     }
 
     @supports not ((mask-image:none) or (-webkit-mask:none)) {
